<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="cz.droidboy.worktime.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true">

        <cz.droidboy.worktime.ui.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/settings_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/settings_ssid"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:nextFocusDown="@+id/settings_bssid"
                android:singleLine="true"/>

        </cz.droidboy.worktime.ui.FloatLabelLayout>

        <LinearLayout
            android:id="@+id/settings_more_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <cz.droidboy.worktime.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@id/settings_bssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_bssid"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:nextFocusDown="@+id/settings_channels"
                    android:singleLine="true"/>

            </cz.droidboy.worktime.ui.FloatLabelLayout>

            <cz.droidboy.worktime.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@id/settings_channels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_channels"
                    android:imeActionId="@+id/save"
                    android:imeActionLabel="@string/save"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:nextFocusDown="@+id/settings_button"
                    android:singleLine="true"/>

            </cz.droidboy.worktime.ui.FloatLabelLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/settings_more_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/accent"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>